--- a/themes/real-estate/login/resources/css/login.css
+++ b/themes/real-estate/login/resources/css/login.css
@@ -6,8 +6,8 @@
 }
 
 .login-pf body {
-    background: url("../img/keycloak-bg.png") no-repeat center center fixed;
-    background-size: cover;
+    background: rgb(249,249,249);
+    background: linear-gradient(265deg, rgba(249,249,249,1) 0%, rgba(255,107,0,1) 100%);
     height: 100%;
 }
 
@@ -72,7 +72,7 @@ a#kc-current-locale-link::after {
 }
 
 div.kc-logo-text {
-    background-image: url(../img/keycloak-logo-text.png);
+    /*background-image: url(../img/keycloak-logo-text.png);*/
     background-repeat: no-repeat;
     height: 63px;
     width: 300px;
@@ -90,6 +90,7 @@ div.kc-logo-text span {
 }
 
 #kc-header-wrapper {
+    color: #000000;
     font-size: 29px;
     text-transform: uppercase;
     letter-spacing: 3px;
@@ -360,7 +361,10 @@ ul#kc-totp-supported-apps {
 @media (max-width: 767px) {
 
     .login-pf body {
-        background: white;
+        /*background: white;*/
+        background: rgb(249,249,249);
+        background: linear-gradient(265deg, rgba(249,249,249,1) 0%, rgba(255,107,0,1) 100%);
+
     }
 
     #kc-header {
