--- a/themes/real-estate/login/resources/css/login.css
+++ b/themes/real-estate/login/resources/css/login.css
@@ -7,7 +7,7 @@
 
 .login-pf body {
     background: rgb(249,249,249);
-    background: linear-gradient(265deg, rgba(249,249,249,1) 0%, rgba(255,107,0,1) 100%);
+    background: linear-gradient(150deg, #FFEDE0 0%, rgba(255,107,0,1) 100%);
     height: 100%;
 }
 
@@ -72,7 +72,6 @@ a#kc-current-locale-link::after {
 }
 
 div.kc-logo-text {
-    /*background-image: url(../img/keycloak-logo-text.png);*/
     background-repeat: no-repeat;
     height: 63px;
     width: 300px;
@@ -90,13 +89,15 @@ div.kc-logo-text span {
 }
 
 #kc-header-wrapper {
-    color: #000000;
-    font-size: 29px;
-    text-transform: uppercase;
+    color: #FF6B00;
+    font-weight: normal;
+    font-size: 40px;
+    text-transform: capitalize;
     letter-spacing: 3px;
     line-height: 1.2em;
     padding: 62px 10px 20px;
     white-space: normal;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 #kc-content {
@@ -163,7 +164,8 @@ div.kc-logo-text span {
 #kc-info-wrapper {
     font-size: 13px;
     padding: 15px 35px;
-    background-color: #F0F0F0;
+    background-color: #F9F9F9;
+    border-radius: 5px;
 }
 
 #kc-form-options span {
@@ -361,10 +363,8 @@ ul#kc-totp-supported-apps {
 @media (max-width: 767px) {
 
     .login-pf body {
-        /*background: white;*/
         background: rgb(249,249,249);
-        background: linear-gradient(265deg, rgba(249,249,249,1) 0%, rgba(255,107,0,1) 100%);
-
+        background: linear-gradient(150deg, #FFEDE0 0%, rgba(255,107,0,1) 100%);
     }
 
     #kc-header {
@@ -492,18 +492,22 @@ ul#kc-totp-supported-apps {
     padding: 0 20px;
     max-width: 500px;
     border-top: 4px solid;
-    border-color: var(--pf-global--primary-color--100);
+    /*border-color: var(--pf-global--primary-color--100);*/
+    border-color: #FF6B00;
+    border-radius: 5px;
+    background-color: #F9F9F9;
 }
 
 /*phone*/
 @media (max-width: 767px) {
     .login-pf-page .card-pf {
         max-width: none;
-        margin-left: 0;
-        margin-right: 0;
+        margin-left: 10px;
+        margin-right: 10px;
         padding-top: 0;
         border-top: 0;
         box-shadow: 0 0;
+
     }
 
     .kc-social-grid {
