--- a/themes/real-estate/login/resources/css/login.css
+++ b/themes/real-estate/login/resources/css/login.css
@@ -6,13 +6,17 @@
 }
 
 .login-pf body {
-    background: rgb(249,249,249);
-    background: linear-gradient(150deg, #FFEDE0 0%, rgba(255,107,0,1) 100%);
+    background: rgb(249, 249, 249);
+    background: linear-gradient(150deg, #FFEDE0 0%, rgba(255, 107, 0, 1) 100%);
     height: 100%;
 }
 
 textarea.pf-c-form-control {
-	height: auto;
+    height: auto;
+}
+
+.pf-c-form-control {
+    border-radius: 5px
 }
 
 .pf-c-alert__title {
@@ -40,12 +44,12 @@ h1#kc-page-title {
     padding: 0;
 }
 
-#kc-locale-dropdown{
+#kc-locale-dropdown {
     display: inline-block;
 }
 
 #kc-locale-dropdown:hover ul {
-    display:block;
+    display: block;
 }
 
 #kc-locale-dropdown a {
@@ -113,7 +117,7 @@ div.kc-logo-text span {
 
 #kc-username {
     text-align: center;
-    margin-bottom:-10px;
+    margin-bottom: -10px;
 }
 
 #kc-webauthn-settings-form {
@@ -165,7 +169,7 @@ div.kc-logo-text span {
     font-size: 13px;
     padding: 15px 35px;
     background-color: #F9F9F9;
-    border-radius: 5px;
+    border-radius: 10px;
 }
 
 #kc-form-options span {
@@ -207,8 +211,8 @@ ul#kc-totp-supported-apps {
 }
 
 #kc-totp-secret-qr-code {
-    max-width:150px;
-    max-height:150px;
+    max-width: 150px;
+    max-height: 150px;
 }
 
 #kc-totp-secret-key {
@@ -283,7 +287,7 @@ ul#kc-totp-supported-apps {
 }
 
 .kc-social-grid {
-    display:grid;
+    display: grid;
     grid-column-gap: 10px;
     grid-row-gap: 5px;
     grid-column-end: span 6;
@@ -303,32 +307,42 @@ ul#kc-totp-supported-apps {
     text-align: center;
 }
 
-.kc-social-section hr{
+.kc-social-section a{
+    border-radius: 10px;
+    padding: 10px;
+    outline: none !important;
+}
+
+.kc-social-section a[type="button"]:hover {
+    outline: none !important;
+}
+
+.kc-social-section hr {
     margin-bottom: 10px
 }
 
-.kc-login-tooltip .kc-tooltip-text{
-    top:-3px;
-    left:160%;
+.kc-login-tooltip .kc-tooltip-text {
+    top: -3px;
+    left: 160%;
     background-color: black;
     visibility: hidden;
     color: #fff;
 
-    min-width:130px;
+    min-width: 130px;
     text-align: center;
     border-radius: 2px;
-    box-shadow:0 1px 8px rgba(0,0,0,0.6);
+    box-shadow: 0 1px 8px rgba(0, 0, 0, 0.6);
     padding: 5px;
 
     position: absolute;
-    opacity:0;
-    transition:opacity 0.5s;
+    opacity: 0;
+    transition: opacity 0.5s;
 }
 
 /* Show tooltip */
 .kc-login-tooltip:hover .kc-tooltip-text {
     visibility: visible;
-    opacity:0.7;
+    opacity: 0.7;
 }
 
 /* Arrow for tooltip */
@@ -363,8 +377,8 @@ ul#kc-totp-supported-apps {
 @media (max-width: 767px) {
 
     .login-pf body {
-        background: rgb(249,249,249);
-        background: linear-gradient(150deg, #FFEDE0 0%, rgba(255,107,0,1) 100%);
+        background: rgb(249, 249, 249);
+        background: linear-gradient(150deg, #FFEDE0 0%, rgba(255, 107, 0, 1) 100%);
     }
 
     #kc-header {
@@ -435,19 +449,46 @@ ul#kc-totp-supported-apps {
     margin-top: 20px;
 }
 
+#kc-form-buttons input {
+    background-color: #F9F9F9;
+    border: 1px solid #FF6B00;
+    color: #FF6B00;
+    border-radius: 5px;
+    font-weight: normal;
+}
+
+#kc-form-buttons input[type = "submit"]:hover {
+    border: 1px solid #FF6B00 !important;
+    background-color: rgba(255, 107, 0, 0.02);
+}
+
+#kc-form-buttons input[type = "submit"] {
+    border: 1px solid #FF6B00 !important;
+    font-size: 15px;
+    padding: 10px;
+}
+
+#kc-form-buttons button[type="submit"] {
+    border: 1px solid #ff0000 !important;
+    font-size: 15px;
+    padding: 10px;
+    border-radius: 5px;
+    color: red
+}
+
 .login-pf-page .login-pf-brand {
     margin-top: 20px;
     max-width: 360px;
     width: 40%;
 }
 
-.select-auth-box-arrow{
+.select-auth-box-arrow {
     display: flex;
     align-items: center;
     margin-right: 2rem;
 }
 
-.select-auth-box-icon{
+.select-auth-box-icon {
     display: flex;
     flex: 0 0 2em;
     justify-content: center;
@@ -455,14 +496,14 @@ ul#kc-totp-supported-apps {
     margin-left: 3rem;
 }
 
-.select-auth-box-parent{
+.select-auth-box-parent {
     border-top: 1px solid var(--pf-global--palette--black-200);
     padding-top: 1rem;
     padding-bottom: 1rem;
     cursor: pointer;
 }
 
-.select-auth-box-parent:hover{
+.select-auth-box-parent:hover {
     background-color: #f7f8f8;
 }
 
@@ -473,6 +514,7 @@ ul#kc-totp-supported-apps {
 .select-auth-box-headline {
     font-size: var(--pf-global--FontSize--md);
     color: var(--pf-global--primary-color--100);
+
     font-weight: bold;
 }
 
@@ -492,9 +534,8 @@ ul#kc-totp-supported-apps {
     padding: 0 20px;
     max-width: 500px;
     border-top: 4px solid;
-    /*border-color: var(--pf-global--primary-color--100);*/
     border-color: #FF6B00;
-    border-radius: 5px;
+    border-radius: 10px;
     background-color: #F9F9F9;
 }
 
@@ -524,6 +565,7 @@ ul#kc-totp-supported-apps {
     font-size: 15px;
     color: #72767b;
 }
+
 #kc-content-wrapper .row {
     margin-left: 0;
     margin-right: 0;
@@ -549,8 +591,34 @@ ul#kc-totp-supported-apps {
 #kc-form-login div.form-group:last-of-type,
 #kc-register-form div.form-group:last-of-type,
 #kc-update-profile-form div.form-group:last-of-type,
-#kc-update-email-form div.form-group:last-of-type{
+#kc-update-email-form div.form-group:last-of-type {
     margin-bottom: 0px;
+}
+
+#kc-form-login input[type="text"],
+#kc-form-login input[type="password"] {
+    border: 2px solid rgba(255, 107, 0, 0.64) !important; /* Set the border style */
+    outline: none !important; /* Remove the outline on focus */
+}
+
+#kc-form-login input:focus {
+    border: 2px solid rgba(255, 107, 0, 0.64) !important;
+    outline: none !important;
+}
+
+#kc-form-login input:hover {
+    border: 2px solid rgba(255, 107, 0, 0.64) !important;
+    outline: none !important;
+}
+
+#kc-register-form input {
+    border: 2px solid rgba(255, 107, 0, 0.64) !important;
+    outline: none !important;
+}
+
+#kc-register-form input:hover {
+    border: 2px solid rgba(255, 107, 0, 0.64) !important;
+    outline: none !important;
 }
 
 .no-bottom-margin {
@@ -565,9 +633,11 @@ ul#kc-totp-supported-apps {
 .kc-recovery-codes-warning {
     margin-bottom: 32px;
 }
+
 .kc-recovery-codes-warning .pf-c-alert__description p {
     font-size: 0.875rem;
 }
+
 .kc-recovery-codes-list {
     list-style: none;
     columns: 2;
@@ -575,10 +645,12 @@ ul#kc-totp-supported-apps {
     padding: 16px 16px 8px 16px;
     border: 1px solid #D2D2D2;
 }
+
 .kc-recovery-codes-list li {
     margin-bottom: 8px;
     font-size: 11px;
 }
+
 .kc-recovery-codes-list li span {
     color: #6A6E73;
     width: 16px;
@@ -590,9 +662,11 @@ ul#kc-totp-supported-apps {
 .kc-recovery-codes-actions {
     margin-bottom: 24px;
 }
+
 .kc-recovery-codes-actions button {
     padding-left: 0;
 }
+
 .kc-recovery-codes-actions button i {
     margin-right: 8px;
 }
@@ -601,4 +675,6 @@ ul#kc-totp-supported-apps {
     align-items: baseline;
     margin-bottom: 16px;
 }
+
+
 /* End Recovery codes */
