--- a/themes/real-estate/login/resources/css/login.css
+++ b/themes/real-estate/login/resources/css/login.css
@@ -6,6 +6,7 @@
 }
 
 .login-pf body {
+    /*background: url("../img/chaincue-real-estate-logo.png") no-repeat center center fixed;*/
     background: rgb(249, 249, 249);
     background: linear-gradient(150deg, #FFEDE0 0%, rgba(255, 107, 0, 1) 100%);
     height: 100%;
@@ -90,6 +91,14 @@ div.kc-logo-text span {
     color: #ededed;
     overflow: visible;
     white-space: nowrap;
+    padding: 25px;
+}
+
+#kc-header img {
+    width: 1000px;
+    height: 120px;
+    margin-bottom: 20px;
+    margin-top: 50px;
 }
 
 #kc-header-wrapper {
@@ -168,7 +177,7 @@ div.kc-logo-text span {
 #kc-info-wrapper {
     font-size: 13px;
     padding: 15px 35px;
-    background-color: #F9F9F9;
+    background-color: rgba(255, 255, 255, 0);
     border-radius: 10px;
 }
 
@@ -275,6 +284,8 @@ ul#kc-totp-supported-apps {
     margin-bottom: var(--pf-global--spacer--sm);
     font-size: 15px;
     text-align: center;
+    /*border: 2px solid red !important;*/
+    /*outline: none !important;*/
 }
 
 .kc-social-provider-name {
@@ -307,7 +318,7 @@ ul#kc-totp-supported-apps {
     text-align: center;
 }
 
-.kc-social-section a{
+.kc-social-section a {
     border-radius: 10px;
     padding: 10px;
     outline: none !important;
@@ -319,6 +330,11 @@ ul#kc-totp-supported-apps {
 
 .kc-social-section hr {
     margin-bottom: 10px
+}
+
+/*Remove provider border effects*/
+.pf-c-button::after {
+    border: none;
 }
 
 .kc-login-tooltip .kc-tooltip-text {
@@ -382,10 +398,11 @@ ul#kc-totp-supported-apps {
     }
 
     #kc-header {
-        padding-left: 15px;
-        padding-right: 15px;
         float: none;
         text-align: left;
+        display: flex;
+        justify-content: center;
+        padding: 15px
     }
 
     #kc-header-wrapper {
@@ -394,6 +411,13 @@ ul#kc-totp-supported-apps {
         padding: 20px 60px 0 0;
         color: #72767b;
         letter-spacing: 0;
+    }
+
+    #kc-header img {
+        width: 600px;
+        height: 100px;
+        margin-bottom: 10px;
+        margin-top: 10px
     }
 
     div.kc-logo-text {
@@ -408,7 +432,6 @@ ul#kc-totp-supported-apps {
     }
 
     #kc-info-wrapper {
-        border-top: 1px solid rgba(255, 255, 255, 0.1);
         background-color: transparent;
     }
 
@@ -450,7 +473,7 @@ ul#kc-totp-supported-apps {
 }
 
 #kc-form-buttons input {
-    background-color: #F9F9F9;
+    background-color: #fff;
     border: 1px solid #FF6B00;
     color: #FF6B00;
     border-radius: 5px;
@@ -459,7 +482,7 @@ ul#kc-totp-supported-apps {
 
 #kc-form-buttons input[type = "submit"]:hover {
     border: 1px solid #FF6B00 !important;
-    background-color: rgba(255, 107, 0, 0.02);
+    background-color: #fcfcfc;
 }
 
 #kc-form-buttons input[type = "submit"] {
@@ -530,13 +553,14 @@ ul#kc-totp-supported-apps {
 
 .card-pf {
     margin: 0 auto;
-    box-shadow: var(--pf-global--BoxShadow--lg);
+    box-shadow: 0 0 0 0 rgba(0, 0, 0, 0), 0 0 0 0 rgba(0, 0, 0, 0);
     padding: 0 20px;
     max-width: 500px;
     border-top: 4px solid;
     border-color: #FF6B00;
     border-radius: 10px;
-    background-color: #F9F9F9;
+    background-color: rgba(249, 249, 249, 0);
+    outline: snow;
 }
 
 /*phone*/
@@ -547,8 +571,7 @@ ul#kc-totp-supported-apps {
         margin-right: 10px;
         padding-top: 0;
         border-top: 0;
-        box-shadow: 0 0;
-
+        box-shadow: 0 0 0 0 rgba(0, 0, 0, 0), 0 0 0 0 rgba(0, 0, 0, 0);
     }
 
     .kc-social-grid {
